# price-impact

./: .gitignore  README.md  pyproject.toml
data/: merged_data.csv
report/: report.aux  report.fdb_latexmk  report.fls  report.out  report.tex
scripts/: extract_efficient_trading_text.py  visualize_price_impact_models.py
src/: impact_models.py  plotting.py  utils.py
